# ops-switchd

./: .gitreview  CMakeLists.txt  DESIGN.md  Makefile.am  README.md  boot.sh  configure.ac
include/: bridge.h  sflow_vty.h  switchd-qos.h  tunnel_vty.h  vrf.h  vtysh_ovsdb_tunnel_context.h
logical-switch-plugin/: CMakeLists.txt
logical-switch-plugin/include/: logical_switch_plugin.h
logical-switch-plugin/src/: logical_switch_plugin.c
mac-learning-plugin/: CMakeLists.txt
mac-learning-plugin/include/: mac-learning-plugin.h
mac-learning-plugin/src/: mac-learning-plugin.c
ops-tests/: testsuite_gate@component.conf  testsuite_gate@feature.conf
ops-tests/feature/: sflow_utils.py  test_sflow_ft_agent_interface.py  test_sflow_ft_functionality.py  test_sflow_ft_multiple_collectors.py  test_sflow_ft_sampling_rate.py
ops-tests/feature/ecmp/: test_layer3_ft_ecmp_resilient.py  test_layer3_ft_ecmp_resilient_ipv6.py
ops-tests/feature/openflow/: README.txt  injection.json  requirements.doc.txt  requirements.saenzpa.txt  requirements.txt  tox.ini
ops-tests/feature/openflow/test/: __init__.py  test_ovs_openflow.py
ops-tests/feature/sflow/: sflow_test.md  sflow_utils.py  test_sflow_ft_agent_interface.py  test_sflow_ft_functionality.py  test_sflow_ft_multiple_collectors.py  test_sflow_ft_per_interface_sampling.py  test_sflow_ft_polling_interval.py  test_sflow_ft_reboot_config_persistence.py  test_sflow_ft_sampling_rate.py
ops-tests/feature/subinterface/: test_layer3_ft_subinterface_route.py
ops-tests/feature/vxlan/: test_vxlan_rim.py  test_vxlan_simplest.py
opsplugins/: bridge.py  port_other_config.py  vrf.py
plugins/: CMakeLists.txt  asic-plugin.h  copp-asic-provider.h  log-switch-asic-provider.h  ops-dirs.c.in  ops-dirs.h  plugin-extensions.c  plugin-extensions.h  plugins.c  plugins.h  plugins_yaml.c  plugins_yaml.h  qos-asic-provider.h  reconfigure-blocks.c  reconfigure-blocks.h  run-blocks.c  run-blocks.h  stats-blocks.c  stats-blocks.h  vxlan-asic-plugin.h
src/: Makefile.am  bridge.c  bridge.h  bufmon-provider.c  bufmon-provider.h  bufmon.c  openswitch-dflt.h  openswitch-idl.h  ops-dirs.c.in  ovs-vswitchd.c  plugins.c  subsystem.c  subsystem.h  vrf.c  vrf.h
src/cli/: CMakeLists.txt  sflow_vty.c
src/cli/tunnel/: CMakeLists.txt  tunnel_vty.c  vtysh_ovsdb_tunnel_context.c
tests/: ops-switchd_test.md  test_vtysh_ct_sflow.py
utilities/: Makefile.am  ovs-appctl.c  ovs-vsctl.c
